[package]
name = "phos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
terminal_size = "0.3"
glob = "0.3"
serde_json = "1.0"
dirs = "5.0"
